--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
     </ng-container>
 </ng-template>
 <ng-template #user>
-  <app-official-nav-and-search></app-official-nav-and-search>
-  <router-outlet></router-outlet>
+  <app-official-nav-and-search class="navbar"></app-official-nav-and-search>
+  <div class="router">
+    <router-outlet></router-outlet>
+  </div>
 </ng-template>
