--- a/src/app/pages/table-des-candidats/table-des-candidats.component.css
+++ b/src/app/pages/table-des-candidats/table-des-candidats.component.css
@@ -19,3 +19,15 @@
   padding: 2rem;
   border-radius: 30px;
 }
+
+:host ::ng-deep .p-dropdown, .p-component, .p-dropdown-items-wrapper, .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
+  border-radius: 25px;
+}
+
+:host ::ng-deep p-multiselect .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
+  border-radius: 25px;
+}
+
+:host ::ng-deep .p-multiselect-label .ng-star-inserted{
+  border-radius: 25px;
+}
