--- a/src/app/pages/table-des-societe/table-des-societe.component.html
+++ b/src/app/pages/table-des-societe/table-des-societe.component.html
@@ -25,7 +25,7 @@
           <th pSortableColumn="telephone">telephone<p-sortIcon field="telephone"></p-sortIcon>
           </th>
           <th>Validation</th>
-          <th>Activation/Suspension</th>
+          <th>Suspension</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-employeur>
