--- a/src/app/admin/tests/tests.component.css
+++ b/src/app/admin/tests/tests.component.css
@@ -59,7 +59,7 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
 
 .cards {
@@ -73,9 +73,11 @@
   background: hsla(0, 0%, 100%, 0.800);
   backdrop-filter: blur(40px);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 30px;
+  margin: 2vw;
+  width: 300px;
   padding: 2rem;
   border-radius: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .button-white{
@@ -87,4 +89,153 @@
 
 .p-button-raised {
   margin: 3px 10px;
+}
+
+.input {
+  padding: 5px 15px;
+  border-radius: 25px;
+}
+
+
+.paging-control {
+  background: rgba(255, 255, 255, 0.801);
+  backdrop-filter: blur(10px);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: fit-content;
+  width: fit-content;
+  margin: auto;
+  border-radius: 40px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.paging-control /deep/ .ngx-pagination .current {
+  border-radius: 20px;
+}
+.paging-control /deep/ .ngx-pagination {
+  border-radius: 20px;
+  margin: 0px 4px;
+  padding: 0px;
+  height: fit-content;
+}
+
+.paging-control /deep/ .ngx-pagination .ng-star-inserted {
+  border-radius: 20px;
+  margin: 0px 2px;
+}
+.paging-control /deep/ .ngx-pagination .ng-star-inserted:hover {
+  border-radius: 20px;
+  margin: 0px 2px;
+}
+
+
+/* The Modal (background) */
+.test-modal {
+  backdrop-filter: blur(20px);
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 20vh; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+
+
+/* Modal Content */
+.test-modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 60vw;
+  animation: fadeIn 0.3s;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 40vh; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 40vw;
+  animation: fadeIn 0.3s;
+}
+
+
+@media (max-width:800px) {
+  
+  .test-modal-content {
+    
+    width: 75vw;
+  }
+}
+
+@media (max-width:600px) {
+  
+  .test-modal-content {
+    
+    width: 85vw;
+  }
+}
+
+@media (max-width:500px) {
+  
+  .test-modal-content {
+    
+    width: 90vw;
+  }
+}
+
+@keyframes fadeInModal {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;
+    transform: scale(0, 0);}
+  100% {opacity:1;
+    transform: scale(1, 1);}
+  
+}
+
+.p-justify-right {
+  display: flex;
+  justify-content:flex-end;
+}
+.p-justify-between {
+  display: flex;
+  justify-content:space-between;
+}
+div{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.p-button-rounded:disabled{
+  color: gray;
+  box-shadow: none;
 }
