--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,24 @@
-*{
-    white-space: pre-wrap
+* {
+  white-space: pre-wrap
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  z-index: 100;
+}
+.router{
+  margin-top: 90px;
+}
+
+@media (max-width:1135px) {
+  .router{
+    margin-top: 132px;
+  }
+}
+
+@media (max-width:960px) {
+  .router{
+    margin-top: 90px;
+  }
 }
