--- a/src/app/pages/blog-home/blog-home.component.html
+++ b/src/app/pages/blog-home/blog-home.component.html
@@ -1,11 +1,10 @@
 <div class="flex-container">
-
   <div class="card-single">
     <section class="articles">
 
       <div class="article" *ngFor="let blog of blogs">
         <div class="left">
-          <img src="{{blog.logo}}" alt="">
+          <img src="../../../assets/admin.jpg" alt="">
         </div>
         <div class="right">
           
