--- a/src/app/pages/offres/offres.component.css
+++ b/src/app/pages/offres/offres.component.css
@@ -6,16 +6,11 @@
   white-space: pre-wrap
 }
 
-.flex-cont {
-
-  display: flex;
-  flex-wrap: wrap;
-  padding: 5px;
-  margin: 5px;
-  border-radius: 30px;
-  justify-content: space-between;
-  flex-flow: column;
+body{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
 
 .blur {
   padding: 5px 10px;
@@ -27,7 +22,7 @@
 .input {
   padding: 5px 15px;
   margin: 5px;
-  border-radius: 25px 25px 25px 25px ;
+  border-radius: 25px;
   background: rgba(255, 255, 255, 0.616);
   backdrop-filter: blur(10px);
 }
@@ -36,27 +31,47 @@
   width: 30vw;
 }
 
-.card-single {
-  background: hsla(0, 0%, 100%, 0.800);
+
+
+.search-bar {
+  background: rgba(32, 132, 247, 0.8);
+  color: white;
+  font-weight: bold;
   backdrop-filter: blur(30px);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   height: fit-content;
-  padding: 2rem;
-  margin: 5px;
+  padding: 1vw;
+  margin: 1vw;
   border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .main {
-  background-image: url("../../../../assets/apps.46003.14259451864568504.ad5e5d07-0fbb-46ed-b9b6-a1b781645691.jpg");
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding: 2rem;
+  background-image: url("../../../assets/Hiring-Manager-Reviewing-Resume-During-Job-Interview.jpg");
+  background-size: cover;
+  padding: 0px 2rem;
   margin: 5px;
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.card-single {
+  background: hsla(0, 0%, 100%, 0.800);
+  backdrop-filter: blur(30px);
+  height: fit-content;
+  padding: 1vw 1vw 0.5vw 1vw;
+  margin: 1vw;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
+.flex-cont {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1vw;
+  margin: 1vw;
+  border-radius: 30px;
+  flex-flow: column;
+}
 .dialog{
   border-radius: 20px;
 }
@@ -68,13 +83,14 @@
 .paging-control {
   background: rgba(255, 255, 255, 0.801);
   backdrop-filter: blur(10px);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   height: fit-content;
   width: fit-content;
   margin: auto;
   border-radius: 40px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+
 
 .paging-control /deep/ .ngx-pagination .current {
   border-radius: 20px;
@@ -86,11 +102,12 @@
   height: fit-content;
 }
 
-.paging-control /deep/ .ngx-pagination .ng-star-inserted {
+.paging-control /deep/ .ngx-pagination .ng-star-inserted, .ngx-pagination .pagination-next, .ngx-pagination li {
   border-radius: 20px;
   margin: 0px 2px;
 }
-.paging-control /deep/ .ngx-pagination .ng-star-inserted:hover {
+
+.paging-control /deep/ .ngx-pagination li {
   border-radius: 20px;
   margin: 0px 2px;
 }
@@ -98,20 +115,31 @@
 
 /* The Modal (background) */
 .modal {
+  backdrop-filter: blur(20px);
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 20vh; /* Location of the box */
+  padding-top: 80px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  height: 100%;  /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   animation: fadeInModal 0.3s;
 }
+@media (max-width:1135px) {
+  .modal{
+    padding-top: 122px;
+  }
+}
 
+@media (max-width:960px) {
+  .modal{
+    padding-top: 80px;
+  }
+}
 @keyframes fadeInModal {
   0% {opacity:0;}
   100% {opacity:1;}
@@ -120,10 +148,11 @@
 /* Modal Content */
 .modal-content {
   background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
+  margin: 0px auto;
+  padding: 10px;
   border-radius: 20px;
-  width: 60vw;
+  width: 90vw;
+  height: 100%;
   animation: fadeIn 0.3s;
 }
 
@@ -131,7 +160,7 @@
   
   .modal-content {
     
-    width: 75vw;
+    width: 97vw;
   }
 }
 
@@ -139,7 +168,7 @@
   
   .modal-content {
     
-    width: 85vw;
+    width: 98vw;
   }
 }
 
@@ -147,7 +176,7 @@
   
   .modal-content {
     
-    width: 90vw;
+    width: 99vw;
   }
 }
 
@@ -170,12 +199,12 @@
 div{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .p-button-rounded{
-  
-  width: fit-content;
+  padding: 0px 16px;
+  margin: 4px;
 }
 .p-button-rounded:hover{
-  
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -185,14 +214,10 @@ div{
   backdrop-filter: blur(80px);
 }
 
-:host ::ng-deep .p-dropdown, .p-component, .p-dropdown-items-wrapper, .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
-  border-radius: 25px;
+.right img{
+  border-radius: 20px;
+  width: 166px;
 }
-
-:host ::ng-deep p-multiselect .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items, .ng-tns-c72-1{
-  border-radius: 25px;
-}
-
-:host ::ng-deep .p-multiselect-label .ng-star-inserted{
-  border-radius: 25px;
+.p-justify-between p{
+  margin-left: 10px;
 }
