--- a/src/app/pages/societe-cards/societe-cards.component.css
+++ b/src/app/pages/societe-cards/societe-cards.component.css
@@ -11,3 +11,83 @@
   justify-content: space-around;
 }
 
+
+/* The Modal (background) */
+.modal {
+  backdrop-filter: blur(20px);
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 80px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%;  /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+@media (max-width:1135px) {
+  .modal{
+    padding-top: 122px;
+  }
+}
+
+@media (max-width:960px) {
+  .modal{
+    padding-top: 80px;
+  }
+}
+@keyframes fadeInModal {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: 0px auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 90vw;
+  height: 100%;
+  animation: fadeIn 0.3s;
+}
+
+@media (max-width:800px) {
+  
+  .modal-content {
+    
+    width: 97vw;
+  }
+}
+
+@media (max-width:600px) {
+  
+  .modal-content {
+    
+    width: 98vw;
+  }
+}
+
+@media (max-width:500px) {
+  
+  .modal-content {
+    
+    width: 99vw;
+  }
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;
+    transform: scale(0, 0);}
+  100% {opacity:1;
+    transform: scale(1, 1);}
+  
+}
+
+.p-justify-right {
+  display: flex;
+  justify-content:flex-end;
+}
