--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "main-styles.scss";
 @import "../node_modules/bulma/bulma.sass";
+
+.p-button-rounded:hover{
+  
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
